--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongoose": "^5.9.16",
     "mongoose-autopopulate": "^0.12.2",
     "mongoose-url-slugs": "^1.0.2",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "redis": "^3.0.2",
